# rtic_stm32f4_rs

./: 404.html  Cargo.toml  index.html  print.html  searchindex.js
.github/workflows/: mdbook.yml
mdbook/: book.toml
mdbook/src/: chapter_1.md
src/: main.rs  stm32f4_driver.rs
src/tasks/: blinky.rs  mod.rs
