[package]
name = "rtic_stm32f4_rs"
version = "0.1.0"
authors = ["Eirik Kaldhol Strandman <63415376+Eirik2020@users.noreply.github.com>"]
edition = "2024"

[dependencies]
# Core
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"

# RTIC and monotonic
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick"] }
rtic-sync = "1.1.0"

# Debugging
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"

# Other
embedded-hal = "1.0.0"
heapless = "0.8.0"
nb = "1.1.0"
embedded-io = "0.6.1"



[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f401", "defmt", ]



# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
